# mcpredux

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  requirements.txt  server.py  swagger.json
.github/workflows/: codeql.yml  docker.yml
src/: main.rs
