[package]
name = "mcp-redux-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-redux-server"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros", "schemars"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
urlencoding = "2"
